--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,10 @@
 @import "./components/usp-block";
 @import "./components/items-grid";
 @import "./components/list-team";
+@import "./components/clients";
+@import "./components/footer";
+@import "./components/modal";
+
 
 
 
